multiple grids initial example

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -28,12 +28,21 @@
     </div>
 </nav>
 <div class="container">
-    <div>
+    <div class="margin-bottom-basic">
         <h3>Angular Data Grid sample using out-of-box Bootstrap styling</h3>
         Features enabled: sorting, filtering (using both in-grid and external controls), sync with browser URLs, pagination and items-per-page functionality.
         Angular UI Datepicker used for date controls, although you can use any other framework, plugin or styling.
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
+    <h4>Additional Demos</h4>
+    <ul>
+        <li>
+            <a href="../100k/" class="margin-bottom-basic" target="_blank">100k rows</a>
+        </li>
+        <li>
+            <a href="multiple.html" target="_blank">Multiple grids on page</a>
+        </li>
+    </ul>
     <hr>
     <div class="row">
         <div>
