--- a/demo/bootstrap/multiple.html
+++ b/demo/bootstrap/multiple.html
@@ -20,7 +20,7 @@
 <div class="container">
     <div>
         <h3>Angular Data Grid - Multiple Grids Example</h3>
-        You need to assign <code>id</code> attribute for each grid instance on a page to make them work simultaneously. If you use external filtering, assign <code>grid-id</code> to id and <code>ng-change</code> to associated
+        You need to assign <code>id</code> attribute for each grid instance on a page to make them work simultaneously. If you use external filtering, assign <code>grid-id</code> to grid id and <code>ng-change</code> to associated
         <code>gridActions</code> (see example below).
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
