--- a/demo/material/index.html
+++ b/demo/material/index.html
@@ -79,7 +79,7 @@
                                    ng-change="gridActions.filter()"></md-datepicker>
                 </div>
                 <div  layout="row" layout-align="start center">
-                    <md-button ng-show="dateTo || dateFrom" class="md-raised md-primary" ng-click="dateTo = ''; dateFrom = ''; reloadGrid();">Clear Dates</md-button>
+                    <md-button ng-show="dateTo || dateFrom" class="md-raised md-primary" ng-click="dateTo = ''; dateFrom = ''; gridActions.refresh();">Clear Dates</md-button>
                 </div>
             </div>
             <div grid-data id='test' grid-options="gridOptions" grid-actions="gridActions">
