Fixed problem when grid-item contains directive with ng-transclude in template.

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -16,7 +16,7 @@
             <button id="single-button" type="button" class="btn btn-info" uib-dropdown-toggle>
                 Change Theme <span class="caret"></span>
             </button>
-            <ul class="uib-dropdown-menu" aria-labelledby="simple-dropdown">
+            <ul class="dropdown-menu" aria-labelledby="simple-dropdown">
                 <li>
                     <a href="index.html"><strong>Bootstrap Design</strong></a>
                 </li>
@@ -227,11 +227,11 @@
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.14.3.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+<script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-animate.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-aria.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular-messages.min.js"></script>
 <script src="../../dist/pagination.min.js"></script>
 <script src="../../dist/dataGrid.min.js"></script>
 <script src="js/demoApp.js"></script>
