UI Router plus server pagination - fixed #20

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -45,6 +45,9 @@
         <li>
             <a href="server-pagination.html" target="_blank">Server pagination</a>
         </li>
+        <li>
+            <a href="ui-router.html" target="_blank">UI Router plus server pagination</a>
+        </li>
     </ul>
     <hr>
     <div class="row">
