--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -158,7 +158,7 @@
                         </form>
                     </div>
                 </div>
-                <table class="table table-bordered table-striped" fixed-header-2>
+                <table class="table table-bordered table-striped">
                     <thead>
                     <tr>
                         <th sortable="code" class="sortable">
@@ -238,6 +238,5 @@
 <script src="../../dist/pagination.min.js"></script>
 <script src="../../dist/dataGrid.min.js"></script>
 <script src="js/demoApp.js"></script>
-<script src="../../src/js/andrey_c_changes/directive2.js"></script>
 
 </html>
