Fix Issue #29: Changed file structure

--- a/demo/fixed-header/bootstrap-grid.html
+++ b/demo/fixed-header/bootstrap-grid.html
@@ -6,8 +6,9 @@
     <link rel="icon" href="https://angularjs.org/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/angular-data-grid.bootstrap.css">
-    <link rel="stylesheet" href="css/fixed-header.css">
+    <link rel="stylesheet" href="../../demo/bootstrap/css/angular-data-grid.bootstrap.css">
+    <link rel="stylesheet" href="../../dist/css/fixedHeader/fixed-header.css">
+    <link rel="stylesheet" href="css/fixed-header.bootstrap.css">
 </head>
 <body ng-app="myApp" ng-controller="myAppController" ng-cloak>
 <nav class="navbar navbar-inverse">
