--- a/demo/fixed-header/angular-md-grid.html
+++ b/demo/fixed-header/angular-md-grid.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-blue.min.css">
-    <link rel="stylesheet" href="css/angular-data-grid.material.css">
-    <link rel="stylesheet" href="css/fixed-header.css">
+    <link rel="stylesheet" href="../../demo/material/css/angular-data-grid.material.css">
+    <link rel="stylesheet" href="../../dist/css/fixedHeader/fixed-header.css">
+    <link rel="stylesheet" href="css/fixed-header.material.css">
 </head>
 <body ng-app="myApp" ng-controller="myAppController" ng-cloak>
 <div layout="column" layout-fill>
