Added links to codepen, updated readme.md, added links to additional demos

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -48,6 +48,9 @@
         <li>
             <a href="ui-router.html" target="_blank">UI Router plus server pagination</a>
         </li>
+        <li>
+            <a href="../fixed-header/bootstrap-grid.html">Fixed header table</a>
+        </li>
     </ul>
     <hr>
     <div class="row">
