--- a/demo/material/index.html
+++ b/demo/material/index.html
@@ -44,6 +44,12 @@
                     <a href="https://github.com/angular-data-grid/angular-data-grid.github.io"
                        target="_blank">Project GitHub</a></p>
             </div>
+            <h4>Additional Demos</h4>
+            <ul>
+                <li>
+                    <a href="../fixed-header/angular-md-grid.html">Fixed header table</a>
+                </li>
+            </ul>
             <hr>
             <div layout-gt-xs="row" layout-xs="column" layout-align="stretch center">
                 <div  layout="row" layout-align="center start">
