--- a/demo/fixed-header/angular-md-grid.html
+++ b/demo/fixed-header/angular-md-grid.html
@@ -245,9 +245,9 @@
         <hr>
         <md-button class="md-raised md-primary" ng-click="showCode = !showCode">CodePen</md-button>
         <div ng-show="showCode" class="codepen-wrap">
-            <p data-height="768" data-theme-id="21603" data-slug-hash="eJWWpM" data-default-tab="html"
+            <p data-height="768" data-theme-id="21603" data-slug-hash="bqXarG" data-default-tab="html"
                data-user="AngularDataGrid" class='codepen'>See the Pen <a
-                    href='http://codepen.io/AngularDataGrid/pen/eJWWpM'>eJWWpM</a> by AngularDataGrid (<a
+                    href='http://codepen.io/AngularDataGrid/pen/bqXarG'>eJWWpM</a> by AngularDataGrid (<a
                     href='http://codepen.io/AngularDataGrid'>@AngularDataGrid</a>) on <a href='http://codepen.io'>CodePen</a>.
             </p>
             <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
