Modified fixed-header sample links structure

--- a/demo/bootstrap/index.html
+++ b/demo/bootstrap/index.html
@@ -49,7 +49,7 @@
             <a href="ui-router.html" target="_blank">UI Router plus server pagination</a>
         </li>
         <li>
-            <a href="../fixed-header/bootstrap-grid.html">Fixed header table</a>
+            <a href="../fixed-header/bootstrap-grid.html" target="_blank">Fixed header table</a>
         </li>
     </ul>
     <hr>
