--- a/demo/fixed-header/angular-md-grid.html
+++ b/demo/fixed-header/angular-md-grid.html
@@ -17,30 +17,15 @@
         <div class="md-toolbar-tools" flex-gt-md="60" flex-md="80" flex-sm="100">
             <span>Angular Data Grid &mdash; Material Design</span>
             <span flex></span>
-            <md-menu md-position-mode="target-right target">
-                <md-button ng-click="$mdOpenMenu($event)">
-                    <span layout="row" layout-align="center center">
-                    Change theme
-                    <i class="material-icons">arrow_drop_down</i>
-                    </span>
-                </md-button>
-                <md-menu-content>
-                    <md-menu-item>
-                        <a href="../bootstrap/">Bootstrap Design</a>
-                    </md-menu-item>
-                    <md-menu-item>
-                        <a href="index.html"><strong>Material Design</strong></a>
-                    </md-menu-item>
-                </md-menu-content>
-            </md-menu>
+            <ul><a href="../material/">Back to main demo</a></ul>
         </div>
     </md-toolbar>
 
     <div flex-gt-md="60" flex-md="80" flex-xs="100">
         <div>
-            <h4>Angular Data Grid sample using Material Design styling</h4>
+            <h4>Fix Header Table</h4>
 
-            <p>Features enabled: sorting, filtering, sync with browser URLs, pagination and item-per-page functionality.
+            <p>Features enabled: sorting, filtering, sync with browser URLs, pagination, item-per-page and fixed-header functionality.
                 Out-of-box <a href="https://material.angularjs.org/" target="_blank">Angular Material</a> layout and
                 input controls used,
                 along with <a href="http://www.getmdl.io/" target="_blank">Material Design Light</a> default CSS for
