--- a/demo/fixed-header/bootstrap-grid.html
+++ b/demo/fixed-header/bootstrap-grid.html
@@ -14,25 +14,15 @@
 <nav class="navbar navbar-inverse fixed-nav">
     <div class="container">
         <a href="#" class="navbar-brand">Angular Data Grid - Bootstrap Design</a>
-        <div class="navbar-form navbar-right" uib-dropdown>
-            <button id="single-button" type="button" class="btn btn-info" uib-dropdown-toggle>
-                Change Theme <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="simple-dropdown">
-                <li>
-                    <a href="index.html"><strong>Bootstrap Design</strong></a>
-                </li>
-                <li>
-                    <a href="../material/">Material Design</a>
-                </li>
-            </ul>
-        </div>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="../bootstrap/">Back to main demo</a></li>
+        </ul>
     </div>
 </nav>
 <div class="container">
     <div class="margin-bottom-basic padding-top-50">
-        <h2>Angular Data Grid sample using out-of-box Bootstrap styling</h2>
-        Features enabled: sorting, filtering (using both in-grid and external controls), sync with browser URLs, pagination and items-per-page functionality.
+        <h2>Fix Header Table</h2>
+        Features enabled: sorting, filtering (using both in-grid and external controls), sync with browser URLs, pagination, items-per-page and fixed-header functionality.
         Angular UI Datepicker used for date controls, although you can use any other framework, plugin or styling.
         <a href="https://github.com/angular-data-grid/angular-data-grid.github.io" target="_blank">Project GitHub</a>
     </div>
@@ -97,22 +87,6 @@
                 =”=”#the-id-on-above-fixed-element”&gt;</code>
         </p>
     </div>
-    <hr>
-    <h4>Additional Demos</h4>
-    <ul>
-        <li>
-            <a href="../100k/" class="margin-bottom-basic" target="_blank">100k rows</a>
-        </li>
-        <li>
-            <a href="multiple.html" target="_blank">Multiple grids on page</a>
-        </li>
-        <li>
-            <a href="server-pagination.html" target="_blank">Server pagination</a>
-        </li>
-        <li>
-            <a href="ui-router.html" target="_blank">UI Router plus server pagination</a>
-        </li>
-    </ul>
     <hr>
     <div class="row">
         <div>
