--- a/demo/material/index.html
+++ b/demo/material/index.html
@@ -47,7 +47,7 @@
             <h4>Additional Demos</h4>
             <ul>
                 <li>
-                    <a href="../fixed-header/angular-md-grid.html">Fixed header table</a>
+                    <a href="../fixed-header/angular-md-grid.html" target="_blank">Fixed header table</a>
                 </li>
             </ul>
             <hr>
